refactor: update API Gateway structure and enhance instance management
This commit refines the API Gateway architecture by consolidating instance management into a more cohesive structure. It introduces the GatewayMain and ClientHttpServer classes, while removing outdated components such as ApiGateway and ControlServer. The README is updated to reflect the new setup, including detailed instructions for starting the gateway and instances. Additionally, the build process is streamlined with updated scripts for compilation and execution, improving overall usability and clarity.